--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,4 +38,60 @@
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div *ngIf="!supporter" class="container">
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+  ></script>
+  <!-- banner-main -->
+  <ins
+    class="adsbygoogle"
+    style="display: block;"
+    data-ad-client="ca-pub-1760098302057174"
+    data-ad-slot="4716368072"
+    data-ad-format="auto"
+    data-full-width-responsive="true"
+  ></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+<div class="d-flex justify-content-center">
+  <div *ngIf="!supporter">
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <!-- side-bar -->
+    <ins
+      class="adsbygoogle"
+      style="display: block;"
+      data-ad-client="ca-pub-1760098302057174"
+      data-ad-slot="4991700247"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  <router-outlet></router-outlet>
+  <div *ngIf="!supporter">
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <!-- side-bar-2 -->
+    <ins
+      class="adsbygoogle"
+      style="display: block;"
+      data-ad-client="ca-pub-1760098302057174"
+      data-ad-slot="9094882195"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+</div>
