adding multi ability func base and updating some basic styles

--- a/src/app/shared/skill/skill.component.html
+++ b/src/app/shared/skill/skill.component.html
@@ -3,5 +3,5 @@
   [class.skill-selected]="selected"
   [class.skill-unselected]="!selected"
 >
-  <img style="width: 50px;" [class.svg]="!selected" [src]="skill.imagePath" />
+  <img class="skill-size" [class.svg]="!selected" [src]="skill.imagePath" />
 </div>
