--- a/src/app/shared/detailed-view/detailed-view.component.html
+++ b/src/app/shared/detailed-view/detailed-view.component.html
@@ -19,13 +19,27 @@
     <img
       class="p-3 skill-selected rounded-border"
       style="width: 150px;"
-      [src]="displayedAbility.imagePath"
+      [src]="
+        displayedAbility.multiAbility
+          ? displayedAbility.multiImagePath[multiAbilityIndex]
+          : displayedAbility.imagePath
+      "
     />
     <div class="p-2">
-      <h2 class="p-2">{{ displayedAbility.name }}</h2>
+      <h2 class="p-2">
+        {{
+          displayedAbility.multiAbility
+            ? displayedAbility.multiName[multiAbilityIndex]
+            : displayedAbility.name
+        }}
+      </h2>
     </div>
   </div>
   <div class="bg-md-blue p-2 px-5 text-center">
-    <span>{{ displayedAbility.desc }}</span>
+    <span>{{
+      displayedAbility.multiAbility
+        ? displayedAbility.multiDesc[multiAbilityIndex]
+        : displayedAbility.desc
+    }}</span>
   </div>
 </div>
