adding amazon bounty

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-  <a class="navbar-brand" href="#">Crucible Skills</a>
+  <a class="navbar-brand" href="/">Crucible Skills</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -38,60 +38,19 @@
     </ul>
   </div>
 </nav>
-<div *ngIf="!supporter" class="container">
-  <script
-    async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-  ></script>
-  <!-- banner-main -->
-  <ins
-    class="adsbygoogle"
-    style="display: block;"
-    data-ad-client="ca-pub-1760098302057174"
-    data-ad-slot="4716368072"
-    data-ad-format="auto"
-    data-full-width-responsive="true"
-  ></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+<div
+  *ngIf="!supporter"
+  class="container bg-dark-grey d-flex justify-content-center"
+>
+  <iframe
+    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=12&l=ur1&category=twitchprime&banner=025E4WXKK5G4EXYGDD02&f=ifr&lc=pf4&linkID=07c1ca280e08856d6bf50265c646013e&t=cooler090b-20&tracking_id=cooler090b-20"
+    width="300"
+    height="250"
+    scrolling="no"
+    border="0"
+    marginwidth="0"
+    style="border: none;"
+    frameborder="0"
+  ></iframe>
 </div>
 <router-outlet></router-outlet>
-<div *ngIf="!supporter" class="d-flex justify-content-center">
-  <div *ngIf="!supporter">
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
-    <!-- side-bar -->
-    <ins
-      class="adsbygoogle"
-      style="display: block;"
-      data-ad-client="ca-pub-1760098302057174"
-      data-ad-slot="4991700247"
-      data-ad-format="auto"
-      data-full-width-responsive="true"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-  <div *ngIf="!supporter">
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
-    <!-- side-bar-2 -->
-    <ins
-      class="adsbygoogle"
-      style="display: block;"
-      data-ad-client="ca-pub-1760098302057174"
-      data-ad-slot="9094882195"
-      data-ad-format="auto"
-      data-full-width-responsive="true"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-</div>
