--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,9 +43,9 @@
   class="container bg-dark-grey d-flex justify-content-center"
 >
   <iframe
-    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=12&l=ur1&category=twitchprime&banner=025E4WXKK5G4EXYGDD02&f=ifr&lc=pf4&linkID=07c1ca280e08856d6bf50265c646013e&t=cooler090b-20&tracking_id=cooler090b-20"
-    width="300"
-    height="250"
+    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primemain&banner=1FM3MKXZNJ0PPEBRV2R2&f=ifr&linkID=d20359f3bb71b9e7e5ca9556bf52e7d8&t=cooler090b-20&tracking_id=cooler090b-20"
+    width="728"
+    height="90"
     scrolling="no"
     border="0"
     marginwidth="0"
