--- a/src/app/shared/ability/ability.component.html
+++ b/src/app/shared/ability/ability.component.html
@@ -2,7 +2,7 @@
   {{ name }}
 </h3>
 <div class="p-1">
-  <img class="svg" style="width: 60px;" [src]="imagePath" />
+  <img class="svg" style="width: 60px;" alt="name" [src]="imagePath" />
 </div>
 <div class="p-1 d-flex justify-content-center">
   <div class="p-1 white-border bg-dark-blue rounded-border-lt">{{ input }}</div>
