adding alt tags and rel noopener sercurity update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,7 +68,12 @@
     <div class="col-md-6 bg-md-blue white-border">
       <div class="row text-center text-white bg-dark-blue">
         <div class="col-3 p-3">
-          <img class="svg" style="width: 50px;" src="/assets/essence.svg" />
+          <img
+            class="svg"
+            style="width: 50px;"
+            alt="essence"
+            src="/assets/essence.svg"
+          />
         </div>
         <div class="col-9 d-flex justify-content-center align-items-center">
           <h3 class="p-2 m-0">ESSENCE UPGRADES</h3>
