--- a/src/app/shared/detailed-view/detailed-view.component.html
+++ b/src/app/shared/detailed-view/detailed-view.component.html
@@ -3,6 +3,7 @@
     <img
       class="p-3 skill-selected rounded-border"
       style="width: 150px;"
+      [alt]="displayedSkill.name"
       [src]="displayedSkill.imagePath"
     />
     <div class="p-2">
@@ -19,6 +20,7 @@
     <img
       class="p-3 skill-selected rounded-border"
       style="width: 150px;"
+      [alt]="displayedAbility.name"
       [src]="displayedAbility.imagePath"
     />
     <div class="p-2 d-flex flex-wrap">
