--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,8 @@
 
       <li class="nav-item">
         <a
+          rel="noopener"
+          rel="noreferrer"
           class="nav-link"
           href="https://github.com/cooler09/crucible-skills/issues"
           target="_blank"
@@ -29,6 +31,8 @@
       </li>
       <li class="nav-item">
         <a
+          rel="noopener"
+          rel="noreferrer"
           class="nav-link"
           href="https://www.patreon.com/zacharylockhart"
           target="_blank"
@@ -44,6 +48,7 @@
 >
   <iframe
     src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primemain&banner=1FM3MKXZNJ0PPEBRV2R2&f=ifr&linkID=d20359f3bb71b9e7e5ca9556bf52e7d8&t=cooler090b-20&tracking_id=cooler090b-20"
+    title="advertisement"
     width="728"
     height="90"
     scrolling="no"
