alt tags for images

--- a/src/app/shared/characters/characters.component.html
+++ b/src/app/shared/characters/characters.component.html
@@ -2,6 +2,7 @@
   <img
     style="width: 100px;"
     (click)="characterClick(character)"
+    [alt]="character.name"
     [src]="character.imagePath"
   />
 </div>
