--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,10 +47,22 @@
   class="container bg-dark-grey d-flex justify-content-center"
 >
   <iframe
+    class="d-none d-sm-block"
     src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primemain&banner=1FM3MKXZNJ0PPEBRV2R2&f=ifr&linkID=d20359f3bb71b9e7e5ca9556bf52e7d8&t=cooler090b-20&tracking_id=cooler090b-20"
     title="advertisement"
     width="728"
     height="90"
+    scrolling="no"
+    border="0"
+    marginwidth="0"
+    style="border: none;"
+    frameborder="0"
+  ></iframe>
+  <iframe
+    class="d-sm-none"
+    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=13&l=ur1&category=primemain&banner=0NVA2PKRAY588CJNAYG2&f=ifr&linkID=411da7f335f97ddb528eb51caa4a57f9&t=cooler090b-20&tracking_id=cooler090b-20"
+    width="468"
+    height="60"
     scrolling="no"
     border="0"
     marginwidth="0"
