adding more seo data

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container bg-cream">
+  <h1 class="d-none">Amazon's Crucible Skill Tree and Builds</h1>
   <div class="row p-3 bg-dark">
     <div class="d-flex justify-content-between" style="overflow-x: scroll;">
       <app-characters
