--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,29 @@
           >Home <span class="sr-only">(current)</span></a
         >
       </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Other Sites
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a
+            rel="noopener"
+            rel="noreferrer"
+            class="dropdown-item"
+            target="_blank"
+            href="https://pso2builds.com/"
+            >PSO 2 Builds</a
+          >
+        </div>
+      </li>
 
       <li class="nav-item">
         <a
